fix static overflow bugs

--- a/static/css/slider/css/main.css
+++ b/static/css/slider/css/main.css
@@ -3863,3 +3863,7 @@ input.num-product::-webkit-inner-spin-button {
 .isotope-grid {
   display: inline-flex;
 }
+
+.slick1 {
+  overflow: hidden;
+}
